<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teachers_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="Notes"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.992">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:id="@+id/physics_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/physics"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub1"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="15dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/biology_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/biology"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub2"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/chemistry_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/chemistry"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub3"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/maths_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/maths"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub4"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/english_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/english"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub5"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/hindi_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/hindi"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub6"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/history_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/history"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub7"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/civics_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/civics"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub8"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/geography_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/geography"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub9"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/economics_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="30dp"
                    android:background="#66FFB5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="#00A2FF"
                        android:padding="5dp"
                        >
                        <ImageView
                            android:src="@drawable/economics"
                            android:layout_marginStart="15dp"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub10"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorWhite"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>